johnP2/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
  - host: app-1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-1
            port:
              number: 80
  - host: app-2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-3
            port:
              number: 80
